# DistributedAudio

./: .gitignore  CMakeLists.txt  README.md
plugin/: CMakeLists.txt  DryDelay.cpp  DryDelay.h  PlaybackBuffer.cpp  PlaybackBuffer.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ReceiverThread.cpp  ReceiverThread.h  SenderThread.cpp  SenderThread.h
receiver/: echo_node.py  receiver.py  test_sender.py
shared/: DistributedAudioPacket.h
